# NCEPLIBS

./: .gitignore  .gitmodules  CHANGES.md  CMakeLists.txt  COMPONENTS  LICENSE.md  README.md  deploy_modulefiles.sh  deploy_modulefiles.sh.in  dir_49e56c817e5e54854c35e136979f97ca.html  emc_post_gfortran-10.patch  emc_post_gfortran-10.sh  groups  index.html  lua2tcl.py  navtreedata.js  project.config  setenv_nceplibs_bash_template.txt  setenv_nceplibs_csh_template.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_linux.yml
NCEPLIBS-crtm/: CMakeLists.txt  Makefile  NESDIS_ATMS_SnowEM_Module.f90  make.rules
curl/: CMakeLists.txt
docs/: CMakeLists.txt  Doxyfile.in  user_guide.md
hdf5/src/: H5Edefin.h  H5Einit.h  H5Epubgen.h  H5Eterm.h
jasper/: ChangeLog
jasper/doc/html/: bmp__cod_8h_source.html  bmp__enc_8h_source.html  dir_03986a63c999de356352b72ae407e003.html  dir_09abaa95a44289eab8d3b9434c4e656f.html  dir_299ebfe1cc2c52fbde02c92bba5c56c2.html  dir_342eb318f159ad4f2976a12c010d5f8e.html  dir_5aeae8c1ecc1a1ea4dacc21b0bd279a9.html  dir_701cf39cedbf121a23b3e964052bfc11.html  dir_7ebf02b19005ebb740acbe1a36ddc318.html  dir_85fc52db2fbf03d110bfbf3a9d7c9980.html  dir_c42a51af48821e452d22e0cfd34d0f54.html  dir_cb3a42e202224f833a0ce8a49b756886.html  dir_d1e0c8e7462761ba7e08749b2c4ea5bb.html  dir_d6600b0a5e89fc30d4ccbf69cf992582.html  dir_e185740431b67181ecdca7402cacad0e.html  dir_e25500c44d2153759517bfe430937658.html  dir_fc44c3cf5f3015e3bb2825f05a939783.html  faq.html  files.html  getting_started.html  index.html  install.html  jas__cm_8h_source.html  jas__debug_8h_source.html  jas__dll_8h_source.html  jas__fix_8h_source.html  jas__getopt_8h_source.html  jas__icc_8h_source.html  jas__image_8h_source.html  jas__init_8h_source.html  jas__malloc_8h_source.html  jas__math_8h_source.html  jas__seq_8h_source.html  jas__stream_8h_source.html  jas__string_8h_source.html  jas__tmr_8h_source.html  jas__tvp_8h_source.html  jas__types_8h_source.html  jas__version_8h_source.html  jasper_8h_source.html  (+37 more)
jasper/src/libjasper/include/jasper/: jas_image.h
netcdf-fortran/: CMakeLists.txt  CTestConfig.cmake
netcdf-fortran/fortran/: netcdf.inc
tmplModulefiles/NCEPLIBS/: NCEPLIBS  NCEPLIBS.lua
tmplModulefiles/bacio/: bacio  bacio.lua
tmplModulefiles/bufr/: bufr  bufr.lua
tmplModulefiles/crtm/: crtm  crtm.lua
tmplModulefiles/g2/: g2  g2.lua
tmplModulefiles/g2c/: g2c.lua
tmplModulefiles/g2tmpl/: g2tmpl  g2tmpl.lua
tmplModulefiles/gfsio/: gfsio  gfsio.lua
tmplModulefiles/grib_util/: grib_util.lua
tmplModulefiles/ip/: ip  ip.lua
tmplModulefiles/ip2/: ip2  ip2.lua
tmplModulefiles/landsfcutil/: landsfcutil  landsfcutil.lua
tmplModulefiles/nceppost/: nceppost  nceppost.lua
tmplModulefiles/nemsio/: nemsio  nemsio.lua
tmplModulefiles/nemsiogfs/: nemsiogfs  nemsiogfs.lua
tmplModulefiles/prod_util/: prod_util.lua
tmplModulefiles/sfcio/: sfcio  sfcio.lua
tmplModulefiles/sigio/: sigio  sigio.lua
tmplModulefiles/sp/: sp  sp.lua
tmplModulefiles/upp/: upp.lua
tmplModulefiles/w3emc/: w3emc  w3emc.lua
tmplModulefiles/w3nco/: w3nco  w3nco.lua
tmplModulefiles/wgrib2/: wgrib2  wgrib2.lua
tmplModulefiles/wrf_io/: wrf_io  wrf_io.lua
tmplModulefiles/wrfio/: wrfio.lua
